
	* sort.c:
	Resolved a trivial compiler warning.
	* dbmail-user.c:
	List forwards as part of 'dbmail-user -l' output (closes bug #605)
	* auth.h, authmodule.h, authmodule.c, modules/authsql.c,
	modules/authldap.c:
	New function auth_get_known_aliases.
	* list.h, list.c:
	New function g_list_dedup.
	* man/fixsp.pl, man/Makefile.am:
	Added a Perl script to fix the man page output.

2007-06-22  Aaron Stone  <aaron@serendipity.cx>

	* server.c:
	Reopen log files after a HUP (closes bug #615)

2007-06-21  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	collapse BETWEEN clause if hi and low values are equal
	* dbmail.conf, imapcommands.c:
	allow override of CAPABILITY message so people can disable stuff like 
	IDLE

2007-06-19  Paul Stevens <paul@nfg.nl>

	* modules/authldap.c, serverchild.c:
	add sigpipe handling during ldap disconnect
	* dbmail-imapsession.c, dbmail.conf:
	add idle_timeout to dbmail.conf
	* db.c, dbmailtypes.h, modules/dbmysql.c, modules/dbpgsql.c, 
	modules/dbsqlite.c:
	add timewindow to suppress_duplicate detection

2007-06-18  Paul Stevens <paul@nfg.nl>

	* sort.c:
	log suppress_duplicate at TRACE_MESSAGE
	* ChangeLog, dbmail.conf, sort.c:
	add suppress_duplicate to dbmail.conf
	* db.c:
	check for resent-message-id during duplicate check
	* db.c, db.h, sort.c:
	avoid duplicate message-ids in a mailbox
	* dbmail-imapsession.h:
	add missing prototype declaration

2007-06-18  Paul J Stevens <paul@nfg.nl>

	* dbmail.conf, sort.c:
	add suppress_duplicate to dbmail.conf
	* db.c:
	check for resent-message-id during duplicate check
	* db.c, db.h, sort.c:
	avoid duplicate message-ids in a mailbox
	* dbmail-imapsession.h:
	add missing prototype declaration

2007-06-17  Paul Stevens <paul@nfg.nl>

	* ChangeLog, dbmail-imapsession.c, imap4.c:
	test and finish IDLE using thunderbird and outlook
	* dbmail-imapsession.c, dbmailtypes.h, debian/rules, imap4.c, 
	imap4.h, imapcommands.c, imapcommands.h, server.c, serverchild.c:
	add IDLE capability
